[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.3",
    "langchain-mcp-adapters>=0.2.2",
    "langfuse>=4.6.1",
    "langgraph>=1.2.1",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "redis[asyncio]>=6.4.0",
    "sentry-sdk[fastapi]>=2.60.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=25.5.0",
    "supabase>=2.30.0",
    "uvicorn[standard]>=0.48.0",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]
